# AStar-SFML

./: CMakeLists.txt  README.md  main.cpp
inc/: Grid.cpp  Grid.h  Node.hpp  Path.cpp  Path.h  globals.h
